RESOLVED FIXED244394
css/css-flexbox/flex-aspect-ratio-img-row-007.html Failing
https://bugs.webkit.org/show_bug.cgi?id=244394
Summary css/css-flexbox/flex-aspect-ratio-img-row-007.html Failing
Sammy Gill
Reported 2022-08-26 10:34:04 PDT
css/css-flexbox/flex-aspect-ratio-img-row-007.html is failing because min/max constraints are being taken into consideration when computing the flex base size
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-26 10:34:29 PDT
Sammy Gill
Comment 2 2022-08-26 12:50:35 PDT
EWS
Comment 3 2022-09-29 10:00:13 PDT
Committed 255002@main (e093fe3f0975): <https://commits.webkit.org/255002@main> Reviewed commits have been landed. Closing PR #3717 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.